--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,3 +1,11 @@
 .App {
   text-align: center;
+  display: flex;
+}
+main {
+  flex: 1;
+  align-self: center;
+  background-color: #f5f5f5;
+  max-width: 900px;
+  box-shadow: 1px 1px 0 rgba(0,0,0,.5);
 }
