--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,11 +1,11 @@
 .App {
-  text-align: center;
   display: flex;
+  justify-content: center;
 }
 main {
-  flex: 1;
-  align-self: center;
   background-color: #f5f5f5;
-  max-width: 900px;
-  box-shadow: 1px 1px 0 rgba(0,0,0,.5);
+  width: 1100px;
+  max-width: 100%;
+  padding: 1rem 2rem;
+  box-shadow: 0 0 50px 20px rgba(0,0,0,.2);
 }
