--- a/web/src/index.css
+++ b/web/src/index.css
@@ -12,7 +12,7 @@ html, body, #root {
 }
 
 body {
-    background: rgb(216, 216, 216);
+    background: #eaeaea;
     -webkit-font-smoothing: antialiased;
 }
 
