--- a/web/src/index.css
+++ b/web/src/index.css
@@ -18,4 +18,15 @@ body {
 
 body, input, button {
     font-family: Roboto, sans-serif;
+    font-size: 16px;
+}
+
+.page-title {
+  font-size: 24px;
+  text-align: center;
+}
+.section-title {
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 1em;
 }
