--- a/web/src/pages/Courses/CoursesShow/styles.css
+++ b/web/src/pages/Courses/CoursesShow/styles.css
@@ -1,23 +1,18 @@
-.course-name {
-  text-align: center;
-  margin-bottom: 2rem;
-}
-
-.course-container {
+.CourseShow .course-container {
   display: flex;
 }
-.lesson-content {
+.CourseShow .lesson-content {
   flex-grow: 1;
 }
 
-.course-lessons {
+.CourseShow .course-lessons {
   flex-shrink: 1;
   min-width: 250px;
 }
-.course-lessons ul {
+.CourseShow .course-lessons ul {
   list-style: none;
 }
-.module-name, .lesson {
+.CourseShow .module-name, .CourseShow .lesson {
   background-color: #444;
   color: #fff;
   line-height: 1.2;
@@ -26,19 +21,19 @@
   padding: .3em 1em;
   font-size: 16px;
 }
-.module-lessons {
+.CourseShow .module-lessons {
   padding: 0 1rem;
 }
-.lesson {
+.CourseShow .lesson {
   background-color: #8f8f8f;
 }
-.lesson.finished {
+.CourseShow .lesson.finished {
   background-color: #00ce00;
 }
-.lesson.active {
+.CourseShow .lesson.active {
   background-color: #777;
 }
-.lesson button {
+.CourseShow .lesson button {
   display: block;
   width: 100%;
   text-align: left;
