--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,29 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
 * {
-    padding: 0;
-    margin: 0;
-    outline: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  outline: 0;
+  box-sizing: border-box;
 }
 
 html, body, #root {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    background: #eaeaea;
-    -webkit-font-smoothing: antialiased;
+  background: #eaeaea;
+  -webkit-font-smoothing: antialiased;
 }
 
 body, input, button {
-    font-family: Roboto, sans-serif;
-    font-size: 16px;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  color: #222;
 }
 
 .page-title {
   font-size: 24px;
   text-align: center;
+  margin-bottom: 2em;
 }
 .section-title {
   font-size: 20px;
