--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,11 +1,9 @@
 .App {
-  display: flex;
-  justify-content: center;
-}
-main {
-  background-color: #f5f5f5;
   width: 1100px;
   max-width: 100%;
-  padding: 1rem 2rem;
-  box-shadow: 0 0 50px 20px rgba(0,0,0,.2);
+  box-shadow: 0 0 50px 20px #00000033;
+  background-color: #f5f5f59c;
+}
+main {
+  padding: 3rem 2rem 1rem;
 }
