--- a/web/src/components/GlobalNotifications/styles.css
+++ b/web/src/components/GlobalNotifications/styles.css
@@ -1,8 +1,8 @@
 .notifications {
-  position: absolute;
+  position: fixed;
   z-index: 500;
   left: 50%;
-  top: 5.5rem;
+  top: 3.5rem;
   transform: translateX(-50%);
 }
 .notifications .message {
