--- a/web/src/index.css
+++ b/web/src/index.css
@@ -9,7 +9,7 @@
 }
 
 html, body, #root {
-  height: 100%;
+  min-height: 100vh;
 }
 
 body {
@@ -17,7 +17,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-body, input, button {
+body, input, textarea, button {
   font-family: Quicksand, sans-serif;
   font-size: 16px;
   color: #222;
@@ -118,7 +118,9 @@ button.link {
   padding: 0.5em 1.8em;
   font-size: 14px;
   font-weight: 500;
+  border: 0;
   border-radius: 5px;
+  cursor: pointer;
 }
 .button:hover {
   opacity: .9;
@@ -134,6 +136,9 @@ button.link {
   padding: 2rem 1rem 3rem;
   border: 1px solid #7f7f7f;
   border-radius: 5px;
+}
+.model-form.content-box {
+  max-width: 60rem;
 }
 
 .datatable {
@@ -164,13 +169,25 @@ button.link {
   padding-right: 1.5em;
   text-align: right;
   line-height: 2rem;
+  max-width: 15em;
 }
 .model-form .form-field .field {
   flex: 1;
 }
 .model-form button[type="submit"] {
   margin-top: 2rem;
+  cursor: pointer;
 }
+.model-form input, .model-form textarea {
+  border-radius: 5px;
+  border: 1px solid #7f7f7f;
+  padding: .25em .5em;
+  min-width: 20em;
+}
+.model-form textarea {
+  height: 7.5em;
+}
+
 .upload-field {
   border: 2px dashed #999;
   background: #ffffff;
