--- a/web/src/index.css
+++ b/web/src/index.css
@@ -120,10 +120,12 @@ button.link {
   font-weight: 500;
   border: 0;
   border-radius: 5px;
-  cursor: pointer;
 }
 .button:hover {
   opacity: .9;
+}
+button {
+  cursor: pointer;
 }
 
 .back .mi {
@@ -196,4 +198,23 @@ button.link {
 }
 .upload-field p {
   padding: 1rem;
+}
+
+.edit {
+  font-size: 16px;
+}
+.center-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button i {
+  margin-left: .5em;
+}
+.button.center-content {
+  width: 150px;
+  font-size: 17px;
+  line-height: 1;
+  margin-bottom: 1rem;
 }
