feat(web): improve lessons create/edit
- Added validation error messages
- Auto enable lesson edit after inserte a new one

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -76,6 +76,11 @@ a.mi:hover {
   color: #f00;
   margin-bottom: 2rem;
 }
+input.error, select.error, textarea.error, select.error {
+  border-color: #f00 !important;
+  margin-bottom: inherit;
+  text-align: left;
+}
 button.link {
   background: none;
   border: 0;
