refact(web): home as courses carrossel and courses page as list

--- a/web/src/components/CoursesList/styles.css
+++ b/web/src/components/CoursesList/styles.css
@@ -1,9 +1,9 @@
-.UsersList .search-form {
+.CoursesList .search-form {
   display: flex;
   justify-content: center;
   margin-bottom: 3rem;
 }
-.UsersList .search-form input {
+.CoursesList .search-form input {
   background: none;
   width: 80%;
   padding: .5em;
@@ -13,7 +13,7 @@
   text-align: center;
 }
 
-.UsersList .User {
+.CoursesList .Course {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -22,44 +22,54 @@
   padding: 1rem;
   margin: 1rem 0;
 }
+.CoursesList .Course a {
+  color: inherit;
+}
+.CoursesList .Course.published {
+  border-color: rgb(0, 167, 0)
+}
 
-.UsersList .User .user-photo {
+.CoursesList .Course .course-cover {
   flex: 0 1 90px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.user-photo  {
+.CoursesList .Course .course-name {
+  font-size: 18px;
+  margin-bottom: .8em;
+}
+.CoursesList .Course .course-cover  {
   width: 90px;
   height: 90px;
   overflow: hidden;
   border-radius: 50%;
   border: 1px solid #c5c5c5;
 }
-.user-photo img {
+.CoursesList .Course .course-cover img {
   max-width: 100%;
 }
 
-.UsersList .User .user-details {
+.CoursesList .Course .course-details {
   flex: 1;
   margin: 0 1rem;
   line-height: 1.3;
 }
-.UsersList .user-details .key, .user-details .value {
+.CoursesList .course-details .key, .course-details .value {
   display: inline-block;
 }
-.UsersList .user-details .key {
+.CoursesList .course-details .key {
   margin-right: .5em;
 }
-.UsersList .user-details .user-name {
+.CoursesList .course-details .course-name {
   font-weight: bold;
 }
 
-.UsersList .User .user-progress {
+.CoursesList .Course .course-progress {
   flex: 0 1 auto;
 }
-.UsersList .User .button-group {
+.CoursesList .Course .button-group {
   margin-bottom: 0.5rem;
   text-align: right;
 }
