--- a/web/src/components/CoursesCarrossel/styles.css
+++ b/web/src/components/CoursesCarrossel/styles.css
@@ -4,7 +4,7 @@
 .slick-slide > div {
   text-align: center;
 }
-.Course {
+.CoursesCarrossel .Course {
   margin: 2rem;
   border-radius: 10px;
   box-shadow: 0 0 30px 0px rgba(0,0,0,0.3);
@@ -13,25 +13,25 @@
   min-height: 19.9rem;
   font-size: 14px;
 }
-.Course .course-cover {
+.CoursesCarrossel .Course .course-cover {
   text-align: center;
   margin: 0 0 1rem;
   height: 10rem;
   overflow: hidden;
   border-radius: 10px;
 }
-.Course .course-cover img {
+.CoursesCarrossel .Course .course-cover img {
   margin: 0 auto;
   max-width: 100%;
   border-radius: 10px;
 }
-.Course > div, .Course > a {
+.CoursesCarrossel .Course > div, .CoursesCarrossel .Course > a {
   margin-bottom: .5rem;
 }
-.Course .key {
+.CoursesCarrossel .Course .key {
   margin-right: .2em;
 }
-.Course .course-button {
+.CoursesCarrossel .Course .course-button {
   display: inline-block;
   background: #000;
   color: #fff;
