feat: support to use google cloud storage for file uploads
- User Photos and Course Covers can be uploaded to GCS
- Changed default course and user photo default image
- Added a loader gif to use when image is loading from server
- Fixed small style issues with images
- Set an error message when image cant be downloaded

--- a/web/src/components/Header/styles.css
+++ b/web/src/components/Header/styles.css
@@ -73,8 +73,9 @@
   font-size: 15px;
 }
 .Header .user-photo {
+  background: #f3f3f3;
   display: flex;
-  align-content: center;
+  align-items: center;
   justify-content: center;
   margin-right: 1rem;
   width: 60px;
