--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  width: 1100px;
+  width: 85vw;
   max-width: 100%;
   box-shadow: 0 0 50px 20px #00000033;
   background-color: #f5f5f59c;
