--- a/web/src/pages/Courses/CoursesShow/styles.css
+++ b/web/src/pages/Courses/CoursesShow/styles.css
@@ -10,19 +10,36 @@
 
 .CourseShow .course-lessons {
   flex-shrink: 1;
-  min-width: 250px;
+  width: 300px;
+}
+.CourseShow .course-lessons .progress-bar {
+  width: 100%;
+  margin-bottom: .3rem;
+  font-size: 15px;
 }
 .CourseShow .course-lessons ul {
   list-style: none;
 }
-.CourseShow .module-name, .CourseShow .lesson {
+.CourseShow .name-wraper {
+  display: flex;
+  align-items: center;
   background-color: #444;
   color: #fff;
-  line-height: 1.2;
+  line-height: 1;
   border-radius: 3px;
   margin: 1px 0;
-  padding: .3em 1em;
-  font-size: 16px;
+  padding: 0;
+  font-weight: 500;
+}
+.CourseShow .name-wraper .number {
+  font-size: 30px;
+  font-weight: 400;
+  padding: .3rem .4em .4rem .9rem;
+}
+.CourseShow .name-wraper .name {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.1;
 }
 .CourseShow .module-lessons {
   padding: 0 1rem;
@@ -31,7 +48,7 @@
   background-color: #8f8f8f;
 }
 .CourseShow .lesson.finished {
-  background-color: #00ce00;
+  background-color: #00ce00 !important;
 }
 .CourseShow .lesson.active {
   background-color: #777;
@@ -44,4 +61,18 @@
   border: 0;
   background: none;
   color: #fff;
+}
+.CourseShow .lesson .lesson-view-status {
+  background: #c5c5c5;
+  padding: .14rem .4rem;
+  margin-right: 2px;
+  border-radius: 5px;
+  color: #444;
+}
+.CourseShow .lesson .lesson-view-status .mi {
+  font-size: 30px;
+}
+.CourseShow .lesson.finished .lesson-view-status {
+  background-color: #fff;
+  color: #00ce00;
 }
