--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,8 +1,8 @@
 .App {
   width: 85vw;
   max-width: 100%;
-  box-shadow: 0 0 50px 20px #00000033;
-  background-color: #f5f5f59c;
+  box-shadow: 0 0 30px rgba(000,000,000,.3);
+  background-color: rgba(255, 255, 255,1);
 }
 main {
   padding: 3rem 2rem 1rem;
