feat(web): tracking actions of lessons
- Track lesson open, video start, video done
- Move to the next lesson after video ended
- When enter URL of course without a lesson, go to the first not finished lesson

--- a/web/src/pages/Courses/CoursesShow/styles.css
+++ b/web/src/pages/Courses/CoursesShow/styles.css
@@ -74,6 +74,9 @@
 .CourseShow .lesson.active {
   background-color: #777;
 }
+.CourseShow .lesson.finished.active {
+  background-color: #029f02 !important;
+}
 .CourseShow .lesson button {
   display: block;
   width: 100%;
