style: enhaned layout of progress bar
- left pad when the percentage is less than 10
- show only integer numbers

--- a/web/src/pages/Courses/CoursesShow/styles.css
+++ b/web/src/pages/Courses/CoursesShow/styles.css
@@ -33,6 +33,7 @@
 .CourseShow .module-name-wraper .toggle {
   flex: 1 0 auto;
   text-align: right;
+  margin-right: .3rem;
 }
 .CourseShow .name-wraper {
   display: flex;
