--- a/web/src/App.css
+++ b/web/src/App.css
@@ -2,7 +2,7 @@
   width: 85vw;
   max-width: 100%;
   box-shadow: 0 0 30px rgba(000,000,000,.3);
-  background-color: rgba(255, 255, 255,1);
+  background-color: rgba(255, 255, 255, 1);
 }
 main {
   padding: 3rem 2rem 1rem;
