--- a/web/src/components/CommentsForm/styles.css
+++ b/web/src/components/CommentsForm/styles.css
@@ -4,15 +4,16 @@
 }
 .CommentsForm .content-field {
   background-color: #fff;
-  border: 0;
   border-radius: 10px;
   font-size: 17px;
   width: 100%;
   padding: .8em .5em;
+  border: thin solid #ccc
 }
 .CommentsForm .submit .button {
   position: absolute;
   bottom: 0;
   right: 0;
   padding: .5em 3em;
+  transition: all .3s;
 }
