feat: lesson comments list to admin
- Admin can view a list of all comments and delete then
- header links styled when active

--- a/web/src/components/CommentsList/styles.css
+++ b/web/src/components/CommentsList/styles.css
@@ -6,7 +6,7 @@
 }
 .CommentsList .comment-body-inner {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: start;
   padding: 1rem .8rem;
 }
