feat(web): user details page with comments and courses in progress

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -296,6 +296,7 @@ button.send, .button.send {
 }
 
 .item .item-details {
+  position: relative;
   flex: 1;
   margin: 0 1rem;
   line-height: 1.3;
