fix: forgot password email
- Changed from of email to use environment variable
- Added App name into email message

--- a/backend/resources/views/emails/forgotpassword.edge
+++ b/backend/resources/views/emails/forgotpassword.edge
@@ -3,8 +3,10 @@
   Parece que você solicitou uma recuperação de senha da sua conta. Caso queira prosseguir clique no link abaixo:
 </p>
 <p>
-  <a href="{{ resetPasswordUrl }}" target="_blank">Recuperar Senha</a>
+  <a href="{{ resetPasswordUrl }}" target="_blank">Redefinir Senha</a>
 </p>
 <p>
   Caso não tenha sido você quem fez a solicitação, favor descartar o e-mail.
 </p>
+<hr>
+<p style="text-align:center">{{ appName }}</p>
