--- a/web/src/components/CoursesCarrossel/styles.css
+++ b/web/src/components/CoursesCarrossel/styles.css
@@ -15,7 +15,7 @@
 }
 .CoursesCarrossel .Course {
   margin: 2rem;
-  border-radius: 10px;  
+  border-radius: 10px;
   text-align: center;
   max-width: 16rem;
   min-height: 19.9rem;
@@ -34,9 +34,11 @@
 }
 
 .CoursesCarrossel .Course .course-cover {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0 0 1rem;
-  height: 10rem;
+  height: 8.5rem;
   overflow: hidden;
   border-radius: 10px;
 }
@@ -80,7 +82,7 @@
 
 @media (max-width: 768px){
 
-    
+
 
 
 }
