--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;700&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 * {
@@ -18,7 +18,7 @@ body {
 }
 
 body, input, textarea, button {
-  font-family: Quicksand, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   color: #222;
 }
