--- a/web/src/pages/Login/styles.css
+++ b/web/src/pages/Login/styles.css
@@ -8,18 +8,20 @@
 .Login .login-box {
   flex: 1;
   padding: 3rem;
-  background: rgba(255,255,255,.7);
   border-radius: 10px;
-  margin-top: 6rem;
+  display: flex;
+  flex-direction: column;
 }
 
-.BoxLogin{
-  background: url('/images/bgLogin.jpg');
-  min-height: 570px;
-  background-position: center;
-  background-size: contain;
-  border-radius: 10px;
+.App {
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
 }
+
+.BoxLogin{ }
 
 main{
   padding: 0px ;
@@ -27,31 +29,48 @@ main{
 
 .Login form input {
   background: none;
-  border: 1px solid #000;
-  border-radius: 10px;
-  margin-bottom: .75rem;
+  border: none;
+  border-bottom: 2px solid #fff;
+  border-radius: 0px !important;
+  margin-bottom: 1em;
   padding: .5em .75em;
   font-size: 16px;
+  color: #fff;
+  width: 300px;
 }
+
+.Login form input::placeholder{
+  color: #fff;
+}
+
 .Login form button {
   display: block;
   width: 100%;
   margin-bottom: .5rem;
   padding: .6em 0;
-  border-radius: 10px;
+  border-radius: 0px;
   font-size: 16px;
   cursor: pointer;
-  background: #000;
+  background: #5EBCA4;
   border: 0;
-  color: #fff;
+  color: #fff;  
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.ImgLogin{
+  margin-bottom: 2em;
+  max-width: 240px;
+  align-self: center;
 }
 
 .lost-password {
   font-size: 12px;
   font-weight: 200;
-  color: #000;
+  color: #fff;
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 300;
+  text-transform: uppercase;
 }
 
 
