--- a/web/src/components/CoursesCarrossel/styles.css
+++ b/web/src/components/CoursesCarrossel/styles.css
@@ -15,7 +15,7 @@
 }
 .CoursesCarrossel .Course {
   margin: 2rem;
-  border-radius: 10px;
+  border-radius: 0px;
   text-align: center;
   max-width: 16rem;
   min-height: 19.9rem;
@@ -23,6 +23,7 @@
   transition: all .3s;
   border: #f1f1f5 solid 1px;
   box-shadow: 0 0 10px 0px rgba(0,0,0,0.1);
+  background:#fff;
 }
 
 .CoursesCarrossel .Course:hover{
@@ -50,14 +51,13 @@
 .CoursesCarrossel .Course .course-cover img {
   margin: 0 auto;
   max-width: 100%;
-  border-radius: 10px;
+  border-radius: 0px;
   transition: all .7s;
 }
 
 .CoursesCarrossel .Course:hover .course-button{
-  background: #B41219;
+  background: #5EBCA4;
 }
-
 
 .CoursesCarrossel .Course > div, .CoursesCarrossel .Course > a {
   margin-bottom: .5rem;
@@ -72,7 +72,7 @@
   text-decoration: none;
   padding: 0.2em 2.3em;
   font-size: 13px;
-  border-radius: 5px;
+  border-radius: 0px;
   transition: all .7s;
 }
 
