--- a/web/src/components/Header/styles.css
+++ b/web/src/components/Header/styles.css
@@ -3,8 +3,6 @@
   justify-content: space-between;
   color: #fff;
   padding: 1.5rem 2rem;
-  background: #fff;
-  border-bottom: #000 solid;
 }
 
 .logo {
@@ -14,9 +12,8 @@
 }
 
 .logo img{
-  max-width: 150px;
+  max-width: 210px;
 }
-
 
 .menu {
   flex-grow: 1;
@@ -39,8 +36,8 @@
 }
 .menu li:hover > ul {
   display: block;
-  background-color: #000;
-  border-radius: 4px;
+  background-color: #fff;
+  border-radius: 0px;
   text-align: center;
   height: auto;
   width: 130px;
@@ -48,7 +45,11 @@
   top: 29px;
 }
 .menu li:hover > ul li a{
-  color: #fff;
+  color: #000;
+}
+
+.menu li:hover > ul li a:hover{
+  text-decoration: underline;
 }
 
 .menu li ul li {
@@ -75,14 +76,14 @@
   border-radius: 3px;
   padding: 5px 7px;
   font-size: 18px;
-  color: #000;
+  color: #fff;
 }
 .menu li a {
   display: block;
   padding-bottom: .5em;
   border-bottom: 1px solid transparent;
   text-decoration: none;
-  color: #000;
+  color: #fff;
   transition: all .3s;
 }
 .menu li a:hover {
@@ -96,7 +97,7 @@
   display: flex;
   align-items: center;
   font-size: 15px;
-  color: #000;
+  color: #fff;
 }
 .Header .user-photo {
   background: #f3f3f3;
@@ -108,6 +109,7 @@
   height: 60px;
   font-size: 9px;
   text-align: center;
+  color: #000;
 }
 
 .Header .user-photo img {
@@ -123,12 +125,12 @@
 }
 
 .logout-button {
-  background: #B41219;
+  background: #fff;
   border: 0;
   font-size: 15px;
   cursor: pointer;
-  color: #fff;
-  border-radius: 50px;
+  color: #000;
+  border-radius: 0px;
   transition: all .3s;
   padding: 5px 10px;
 }
