--- a/web/src/pages/Courses/CoursesShow/styles.css
+++ b/web/src/pages/Courses/CoursesShow/styles.css
@@ -66,13 +66,13 @@
 .CourseShow .name-wraper {
   display: flex;
   align-items: center;
-  background-color: #444;
-  color: #fff;
+  background-color: #EEEDED;
+  color: #000;
   line-height: 1;
-  border-radius: 3px;
+  border-radius: 0px;
   margin: 1px 0;
   padding: 0;
-  font-weight: 500;
+  font-weight: bold;
 }
 .CourseShow .name-wraper .number {
   font-size: 30px;
@@ -95,10 +95,10 @@
   transition: max-height .25s ease-in;
 }
 .CourseShow .lesson {
-  background-color: #8f8f8f;
+  background-color: #C7C6C6;
 }
 .CourseShow .lesson.finished {
-  background-color: #00ce00 !important;
+  background-color: #5EBCA4 !important;
 }
 .CourseShow .lesson.active {
   background-color: #777;
@@ -119,13 +119,18 @@
   background: #c5c5c5;
   padding: .14rem .4rem;
   margin-right: 2px;
-  border-radius: 5px;
+  border-radius: 0px;
   color: #444;
 }
 .CourseShow .lesson .lesson-view-status .mi {
   font-size: 30px;
 }
+
+.lesson.name-wraper .lesson-number.number{
+  color: #fff;
+}
+
 .CourseShow .lesson.finished .lesson-view-status {
   background-color: #fff;
-  color: #00ce00;
+  color: #5EBCA4;
 }
