--- a/web/src/pages/Profile/styles.css
+++ b/web/src/pages/Profile/styles.css
@@ -11,7 +11,8 @@
   max-width: 400px;
   padding: 2rem 1rem 3rem;
   border: 1px solid #7f7f7f;
-  border-radius: 5px;
+  border-radius: 0px;
+  background: #fff;
 }
 .profile-content .profile-photo {
   margin-right: 1rem;
